<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/main_padding"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swt_main_premium"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_bottom_margin"
        android:checked="false"
        android:text="@string/swt_main_premium" />

    <TextView
        android:id="@+id/txt_main_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_main_name"/>

    <EditText
        android:id="@+id/etxt_main_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginBottom="@dimen/main_bottom_margin"
        android:maxLength="@integer/main_integer_maxChars"
        android:hint="@string/txt_main_name"
        android:importantForAutofill="no">

        <requestFocus/>

    </EditText>

    <TextView
        android:id="@+id/txt_main_name_chars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_padding"
        android:layout_gravity="end"
        android:text=""/>

    <TextView
        android:id="@+id/txt_main_lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_main_apellidos"/>

    <EditText
        android:id="@+id/etxt_main_lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginBottom="@dimen/main_bottom_margin"
        android:imeOptions="actionDone"
        android:hint="@string/txt_main_apellidos"
        android:maxLength="@integer/main_integer_maxChars"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/txt_main_lastName_chars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_padding"
        android:layout_gravity="end"
        android:text=""/>

    <TextView
        android:id="@+id/txt_main_prefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_main_tratamineto"
        android:layout_marginBottom="@dimen/main_bottom_margin"
        />

    <LinearLayout
        android:id="@+id/ll_main_pack_RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/main_bottom_margin"
        >

        <ImageView
            android:id="@+id/image_main_avatar"
            android:layout_width="@dimen/main_image"
            android:layout_height="@dimen/main_image"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_mr"
            android:contentDescription="@string/img_main_face" />

        <RadioGroup
            android:id="@+id/rg_main_selectPrefix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/rb_main_mr"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_main_mr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_main_mr" />

            <RadioButton
                android:id="@+id/rb_main_mrs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_main_mrs" />

            <RadioButton
                android:id="@+id/rb_main_ms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_main_ms" />
        </RadioGroup>
    </LinearLayout>

    <CheckBox
        android:id="@+id/chkMainEducado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_main_politely"
        android:checked="false"
        android:layout_marginBottom="@dimen/main_bottom_margin" />

    <Button
        android:id="@+id/btnMainGreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:text="@string/btn_main_greet"
        android:layout_marginBottom="@dimen/main_bottom_margin" />

    <LinearLayout
        android:id="@+id/ll_main_pack_prB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/main_bottom_margin"
        >

        <ProgressBar
            android:id="@+id/prB_main_howGreet"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:max="@integer/main_integer_maxGreet" />

        <TextView
            android:id="@+id/txtMainGreetCounter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/txt_main_d_of_10"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    </LinearLayout>
</LinearLayout>